--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@progress/kendo-licensing": "^1.7.1",
+    "@progress/kendo-react-data-tools": "^12.1.0",
+    "@progress/kendo-react-grid": "^12.1.0",
+    "@progress/kendo-react-intl": "^12.1.0",
+    "@progress/kendo-theme-default": "^12.0.1",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "isbot": "^5.1.31",
