--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@progress/kendo-licensing": "^1.7.1",
+    "@progress/kendo-react-buttons": "^12.1.0",
     "@progress/kendo-react-data-tools": "^12.1.0",
+    "@progress/kendo-react-dialogs": "^12.1.0",
     "@progress/kendo-react-grid": "^12.1.0",
     "@progress/kendo-react-intl": "^12.1.0",
     "@progress/kendo-theme-default": "^12.0.1",
